<resources>
    <string name="app_name">Android-TP</string>

    <string name="exercice1">Exercice 1</string>
    <string name="exercice2">Exercice 2</string>
    <string name="exercice3">Exercice 3</string>
    <string name="exercice4">Exercice 4</string>
    <string name="exercice5">Exercice 5</string>
    <string name="exercice1_text" />
    <string name="exercice2_text">Quelle a été la différence de buts lors du match de foorball opposant l\'équipe enseignante du département à l\'équipe étudiante ?</string>
    <string name="exercice2_radio1">+10 pour les enseignants</string>
    <string name="exercice2_radio2">0 match nul</string>
    <string name="exercice2_radio3">+1 pour les étudiants</string>
    <string name="exercice2_bouton">Valider ma répsonse</string>
    <string name="exercice3_res" />
    <string name="nbWin" />
    <string name="nbLose" />
    <string name="nbNul" />
    <string name="exercice4_text">Ecris ton prénom</string>
    <string name="hello_text" />
    <string name="tableText">Choisis ta table de multiplication</string>
    <string name="buttonTableValider">Valider</string>
    <string name="e5_btn1" />
    <string name="e5_btn2" />
</resources>