<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".Exercice3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Main de l'ordinateur" />

        <LinearLayout
            android:id="@+id/autreMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pcPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/papier"
                android:background="@color/black"
                android:padding="5dp"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/pcRock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caillou"
                android:background="@color/black"
                android:padding="5dp"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/pcSicor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ciseaux"
                android:background="@color/black"
                android:padding="5dp"
                android:visibility="invisible"/>

        </LinearLayout>


        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choisir une main" />

        <LinearLayout
            android:id="@+id/maMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/myPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/papier"
                android:background="@color/black"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/myRock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caillou"
                android:background="@color/black"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/mySicor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ciseaux"
                android:background="@color/black"
                android:padding="5dp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/nbWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbWin"/>

        <TextView
            android:id="@+id/nbLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbLose"/>

        <TextView
            android:id="@+id/nbNul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbNul"/>

    </LinearLayout>

</RelativeLayout>